--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
+    "ejsexcel": "^3.4.9",
     "express": "~4.15.2",
     "express-session": "^1.15.6",
     "moment": "^2.18.1",
