--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "ejsexcel": "^3.4.9",
+    "excel-export": "^0.5.1",
     "express": "~4.15.2",
     "express-session": "^1.15.6",
     "moment": "^2.18.1",
@@ -20,6 +21,7 @@
     "morgan": "~1.8.1",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.2",
+    "urlencode": "^1.1.0",
     "xlsx": "^0.11.5"
   }
 }
